[project]
name = "validacijas"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "duckdb==1.4.1",
  "prefect>=3.5.0",
]

[dependency-groups]
dev = [
  "basedpyright>=1.31.6",
  "pytest>=9.0.0",
  "pytest-asyncio>=0.23.3",
  "pytest-cov>=7.0.0",
  "ruff>=0.13.2",
  "sqlfluff>=3.4.2",
  "tombi>=0.6.17",
  "ty>=0.0.1a21",
]

[tool.uv]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'"
]

[tool.ruff]
target-version = "py313"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle error
  "W",  # pycodestyle warning
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8 naming
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "PL",  # pylint
]
ignore = ["PLR2004", "F821"]

[tool.sqlfluff.core]
dialect = "duckdb"

[tool.basedpyright]
pythonVersion = "3.13"
pythonPlatform = "Windows"
typeCheckingMode = "off"
reportUnusedImport = false
reportUnusedVariable = false
